--- a/competence.html
+++ b/competence.html
@@ -14,12 +14,33 @@
           <a href="contact.html"><button class="button"><strong>Contact</strong></button></a>
      </nav>
      <article>
-          
+          <section class="skill-box"><h1>Mes compétences</h1></section>
+          <section class="skill-box">
+               <h2>Réseaux & Télécommunications</h2>
+               <ul>
+                    <li><strong>Architecture réseau :</strong> Modèle OSI, TCP/IP</li>
+                    <li><strong>Configuration :</strong> Switchs et Routeurs (Cisco IOS)</li>
+                    <li><strong>Outils :</strong> Packet Tracer, Wireshark</li>
+               </ul>
+          </section>
+          <section class="skill-box">
+               <h2>Développement & Web</h2>
+               <ul>
+                    <li><strong>Web :</strong> HTML5, CSS3 (Flexbox)</li>
+                    <li><strong>Programmation :</strong> Python (Bases), Bash</li>
+                    <li><strong>Versionning :</strong> Git & GitHub</li>
+               </ul>
+          </section>
+          <section class="skill-box">
+               <h2>Systèmes d'exploitation</h2>
+               <ul>
+                    <li><strong>Linux :</strong> Ligne de commande, droits utilisateurs</li>
+                    <li><strong>Windows :</strong> Installation et configuration</li>
+                    <li><strong>Virtualisation :</strong> VirtualBox, VMware</li>
+               </ul>
+          </section>
      </article>
-     <section>
-            <h1>My Skills</h1>
-            <p>This section highlights my skills and competencies.</p>
-     </section>
+     
      <footer>
 
      </footer>
