--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
      </article>
      <article class="deux">
           <section class="photo">
-               <img src="Images/mon_image.jpeg">
+               <img src="Images/mon_image.jpg">
           </section>
           <section class="texte_présentation">
                <h2>Bienvenue sur ma page Web, je m'appelle Benoît Tivillier</h2>
-               <h3>Cette page Web est là dans le but d'une SAE (projet), Ce site représente mon portfolio, vous y trouverez approximativement toute les informations publiques sur moi.</h3>
+               <h3>Cette page Web est là dans le but d'une SAE (projet), Ce site représente mon portfolio, vous y trouverez approximativement toutes les informations publiques sur moi.</h3>
           </section>
      </article>
      <footer>
