--- a/moi.html
+++ b/moi.html
@@ -14,8 +14,16 @@
           <a href="contact.html"><button class="button"><strong>Contact</strong></button></a>
      </nav>
      <article>
-          <h1>About Me</h1>
-          <p>This section contains information about me.</p>
+          <section class="texte_présentation">
+               <h2>Je me présente, je m'appelle Benoît Tivillier, je suis un étudiant en 1ère année de BUT "Réseaux et Télécommunications" à l'Université de Poitiers (Campus Châtellerault)</h2>
+               <h3>Je suis né à Bordeaux en octobre 2007, je suis arrivé sur Châtellerault en 2018. J'ai fait mon collège et mon lycée à Châtellerault.</h3>
+               <h3>Mes centres d'intérêts sont divers et variés. J'aime beaucoup l'informatique et le jeu vidéo (c'est donc pour ça que je suis dans cette formation, j'aimerai en faire mon métier). Mes 3 jeux préférés sont Minecraft, Genshin Impact et Asseto Corsa.</h3>
+               <h3>Je suis aussi un grand fan de séries et de films, je passe mon temps à regarder des séries et des films. Les séries que j'adore sont Arcane (Netflix), Big Bang Theorie (CBS) et la série de films Matrix.</h3>
+               <h3>J'adore également écouter de la musique (comme vous avez pu le voir sur ma page d'accueil). Mes artistes/groupes préférés sont RadioHead, The Weeknd, Katseye et Ariana Grande.</h3>
+          </section>
+          <section class="photo">
+               <img src="Images/mon_image.jpg">
+          </section>
      </article>
      <footer>
 
