--- a/projets.html
+++ b/projets.html
@@ -14,12 +14,17 @@
           <a href="contact.html"><button class="button"><strong>Contact</strong></button></a>
      </nav>
      <article>
-          
-     </article>
-     <section>
-            <h1>My Projects</h1>
-            <p>This section showcases my projects.</p>
-     </section>
+          <section class="first">
+               <h2>Mes projets</h2>
+               <ul>
+                    <li><strong>Serveur VPN maison :</strong> VPN pour connexion à la box chez moi partout tout le temps</li>
+                    <li><strong>SAE Portfolio :</strong> Création d'un ensemble de page web pour se présenter sur internet</li>
+                    <li><strong>SAE Initiation au réseau domestique</strong> Découvert du réseau domestique et rédaction d'un compte rendu</li>
+                    <li><strong>Projet Personnel et Profesionnel :</strong> Interview d'un profesionnel et soutenance oral</li>
+                    <li><strong>SAE Traiter des données :</strong> Extraction, classification et affichage dans une page HTML de Log de serveur</li>
+               </ul>
+          </section>
+     </acticle>
      <footer>
 
      </footer>
