--- a/competence.html
+++ b/competence.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Mes compétences - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/competence.css">
+        <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
    </head>
    <body>
      <nav>
