--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Mes contacts - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/contact.css">
+        <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
    </head>
    <body>
      <nav>
