--- a/moi.html
+++ b/moi.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>A propos de moi - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/moi.css">
+        <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
    </head>
    <body>
      <nav>
