--- a/projets.html
+++ b/projets.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Mes projets - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/projets.css">
+        <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+
    </head>
    <body>
      <nav>
