--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </section>
      </article>
      <footer>
-
+          <p>© 2025 Benoît Tivillier</p>
      </footer>
    </body>
 </html>
