--- a/projets.html
+++ b/projets.html
@@ -26,7 +26,8 @@
                     <li><strong>SAE Traiter des données :</strong> Extraction, classification et affichage dans une page HTML de Log de serveur</li>
                </ul>
           </section>
-     </acticle>
+     </article>
+     
      <footer>
           <p>© 2025 Benoît Tivillier</p>
      </footer>
