--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <title>Mes contacts - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/contact.css">
         <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS/print_CSS.css">
    </head>
    <body>
      <nav>
