--- a/moi.html
+++ b/moi.html
@@ -5,6 +5,7 @@
         <title>A propos de moi - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/moi.css">
         <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS/print_CSS.css">
    </head>
    <body>
      <nav>
