--- a/projets.html
+++ b/projets.html
@@ -5,6 +5,7 @@
         <title>Mes projets - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/projets.css">
         <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS/print_CSS.css">
 
    </head>
    <body>
