--- a/competence.html
+++ b/competence.html
@@ -5,6 +5,7 @@
         <title>Mes compétences - SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/competence.css">
         <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS/print_CSS.css">
    </head>
    <body>
      <nav>
