--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>SAE Portfolio</title>
         <link rel="stylesheet" type="text/css" href="CSS/index_CSS.css">
         <link rel="stylesheet" type="text/css" href="CSS/nav_CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS/print_CSS.css">
    </head>
    <body>
      <nav>
